Decrease usages of Commons IO